--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <body>
   <div class="container">
     <canvas id="pinkboard"></canvas>
-    <div class="name-of-crush">NamNP <3 Bé Thỏ</div>
+    <div class="name-of-crush">NamNP</div>
   </div>
   <script>
 
