--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     .name-of-crush{
       color: #d11bc2;
       font-weight: 700;
-      font-size: 15px;
+      font-size: 20px;
       position: fixed;
       top: 45%;
       left: 50%;
@@ -69,6 +69,15 @@
     <div class="name-of-crush">NamNP <3 Bé Thỏ</div>
   </div>
   <script>
+
+    const queryString = window.location.search;
+    console.log(queryString);
+    const urlParams = new URLSearchParams(queryString);
+    const name = urlParams.get('name')
+    console.log(name);
+    const text = document.querySelector('.name-of-crush');
+    text.textContent = name;
+
 
 /*
  * Settings
