--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     console.log(name);
     const text = document.querySelector('.name-of-crush');
     text.textContent = name;
+    document.title = name;
 
 
 /*
